# Gamesphere-Import-Tool

./: .env.example  .gitignore  GamesphereImportTool.spec  README.md  WINDOWS-COMMANDS.txt  build_exe.py  custom_games.example.json  gui.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
assets/: gamesphere_theme.json
