[project]
name = "gamesphere-import-tool"
version = "0.2.0"
description = "Import Steam games into Sunshine or Apollo with grid artwork for Gamesphere (Windows GUI + CLI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "glob2>=0.7",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "requests>=2.32.4",
    "vdf>=3.4",
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0.0"]
